feat(java-version):伪共享代码及手动内存对齐
- 完成了伪共享问题复现和手动/自动对齐
- 但是内存这块打印的好像不正确，下次提交打印详细信息